# freddyfer

./: .gitignore  Cargo.toml  LICENSE  config.json
src/: main.rs
src/cache/: app_cache.rs  mod.rs
src/commands/: essentials.rs  funny.rs  help.rs  mod.rs  sounds.rs
src/event_handlers/: handler.rs
src/models/: config.rs  config_error.rs  mod.rs
src/utils/: checks.rs  diacritics.rs  mod.rs  parse.rs
