[package]
name = "voice_events_queue"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
rand = "0.8.5"
serde = "1.0.153"
serde_json = "1.0.94"
snafu = "0.7.4"

[dependencies.songbird]
features = ["builtin-queue", "yt-dlp"]
version = "0.3.0"

[dependencies.serenity]
version = "0.11"
features = ["cache", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
